# CUDAForgedInCombat

./: CMakeLists.txt  README.md
combat/flash_attention/: CMakeLists.txt  device_flash_attention.cuh  device_flash_attention_unreal.cuh  examination.cpp  examination.cu  host_flash_attention.hpp  host_multi_head_attention.hpp
combat/matrix_multiply/: CMakeLists.txt  device_matrix_multiply_basic.cuh  device_matrix_multiply_tensor_core.cuh  examination.cpp  examination.cu  host_matrix_multiply.hpp
combat/nms/: device_nms.cu
combat/reduce_sum/: CMakeLists.txt  CMakelists.txt  device_reduce_basic.cuh  device_reduce_cg.cuh  device_reduce_tensor_core.cuh  examination.cpp  examination.cu  host_reduce.hpp
tools/: generator.hpp  math.hpp  show.hpp  timer.hpp
unit_tests/: test_generator.cpp  test_timer.cpp
